Fixed an issue where the navigation-panel was hidden by the header when the navigation-panel was set to show on top

--- a/app/javascript/styles/mods/navigation-panel_layout_top.scss
+++ b/app/javascript/styles/mods/navigation-panel_layout_top.scss
@@ -20,7 +20,7 @@
       padding-bottom: 100px;
     }
     .tabs-bar__wrapper {
-      top: unset;
+      top: 50px;
     }
 
     /* Publish button */
